# abstract-algebra

./: CMakeLists.txt
.github/workflows/: cmake_build.yml
include/: element.hpp  group.hpp  set.hpp
include/abstract_algebra/: element.hpp  group.hpp  primitive_set.hpp  ring.hpp
src/: CMakeLists.txt  abstract_algebra.cpp
tests/: CMakeLists.txt  test.cpp
